# factoids

./: .gitignore  Cargo.toml  package-lock.json  package.json
migrations/: 20240207055143_slangwords.sql
public/: output.css
src/: lib.rs  main.rs
src/resources/: delete.rs  get_all.rs  get_one.rs  home.rs  mod.rs  post.rs  search.rs  slangword.rs  store.rs  store_page.rs  update.rs  update_page.rs
styles/: input.css
templates/: base.html  index.html  slangword.html
templates/slangwords/: index.html  search.html  show.html  store.html  update.html
