[package]
name = "factoids"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.3", features = ["query"] }
serde = { version = "1.0.197", features = ["derive"] }
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
shuttle-shared-db = { version = "0.43.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.7.3", features = [
    "postgres",
    "tls-rustls",
    "runtime-tokio",
] }
tokio = "1.28.2"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
